# server-test

./: .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DELIVERY_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MENU_CLIENT.md  MENU_CLIENT_README.md  Makefile  README.md  UI_FEATURES.md  UI_MOCKUP.md  docker-compose.yml  main.c  run-menu-client.bat  run-menu-client.sh  test-api.sh
.github/workflows/: ci.yml
client_c/include/: api_client.h
client_c/src/: api_client.c  example.c  menu_client.c
db/: schema.sql  seed.sql
excel/: schema.xlsx
server/: db.conf
server/public/: index.html
server/src/: db.c  db.h  http.c  http.h  main.c  static.c  static.h
